--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
         <script src="assets/libs/jquery-1.10.2.min.js"></script>
         <script src="assets/bundles/jquery.mobile-1.4.0/jquery.mobile-1.4.0.min.js"></script>
         
-        <script src="assets/libs/html5-qrcode.min.js"></script>
+        <!--<script src="assets/libs/html5-qrcode.min.js"></script>-->
                 
         <script src="assets/helpers/helpers.js"></script>
         <script src="assets/helpers/localStorage_helper.js"></script>
