--- a/www/index.html
+++ b/www/index.html
@@ -6,9 +6,9 @@
         <title>QR conf</title>
         
         <link rel="stylesheet"  href="assets/bundles/jquery.mobile-1.4.0/jquery.mobile-1.4.0.min.css">
-        <link rel="stylesheet"  href="http://igorizr.url.ph/qr/home/u116803453/public_html/www/assets/css/app.css">
+        <link rel="stylesheet"  href="assets/css/app.css">
         <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">-->
-        <link rel="stylesheet" href="http://igorizr.url.ph/qr/home/u116803453/public_html/www/assets/css/fonts.css">
+        <link rel="stylesheet" href="assets/css/fonts.css">
         
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="barcodescanner.js"></script>
