--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,9 @@
         
         <script src="assets/libs/jquery-1.10.2.min.js"></script>
         <script src="assets/bundles/jquery.mobile-1.4.0/jquery.mobile-1.4.0.min.js"></script>
+        <script src="assets/bundles/vcardjs/src/Math.uuid.js"></script>
+        <script src="assets/bundles/vcardjs/src/vcard.js"></script>
+        <script src="assets/bundles/vcardjs/src/vcf.js"></script>
                         
         <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/assets/helpers/helpers.js"></script>
         <!--<script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/assets/helpers/localStorage_helper.js"></script>-->
