--- a/www/index.html
+++ b/www/index.html
@@ -98,6 +98,7 @@
         <!-- chooseconference_page -->
         <div id="chooseconference_page" data-role="page">
             <div data-role="header">
+                <a href="#logout">LogOut</a>
                 <h1>QR Conference Buddy</h1>
             </div>
             <!-- /header -->
