not finished db restructure

--- a/www/index.html
+++ b/www/index.html
@@ -81,7 +81,8 @@
         <script src="app/config/config.js"></script>
         <script src="app/db.js"></script>
         <script src="app/models/User_model.js"></script>
-        <script src="app/models/Attendee_model.js"></script>
+        <script src="app/models/Note_model.js"></script>
+        <!--<script src="app/models/Attendee_model.js"></script>-->
         <script src="app/models/Scan_model.js"></script>
         <script src="app/models/Sync_model.js"></script>
         <script src="app/models/Conference_model.js"></script>
