attendee page filters remade

--- a/www/index.html
+++ b/www/index.html
@@ -262,7 +262,7 @@
         <script id="attendees-template" type="text/x-handlebars-template">
             <h2>By Contact Tags</h2>
             {{#each tags}}
-                <a href="#attendeeslist_page?tags={{this.id}}" class="ui-btn ui-btn-icon-right ui-icon-carat-r">{{this.tag}}</a>
+                <a href="#attendeeslist_page?tags={{this}}" class="ui-btn ui-btn-icon-right ui-icon-carat-r">{{this}}</a>
             {{/each}}
         </script>
         
