--- a/www/index.html
+++ b/www/index.html
@@ -130,6 +130,7 @@
             <div data-role="header">
                 <a href="#logout">LogOut</a>
                 <h1>QR Conference Buddy</h1>
+                <button class="refresh ui-btn ui-btn-inline">Refresh</button>
             </div>
             <!-- /header -->
             <div role="main" class="ui-content">
