--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
         <script src="app/models/Sync_model.js"></script>
         <script src="app/models/Conference_model.js"></script>
         <script src="app/models/Tag_model.js"></script>
+        <script src="app/resources/QRparser.js"></script>
         <script src="app/resources/barcodeScanner.js"></script>
         <script src="app/resources/vCardParser.js"></script>
         <script src="app/widgets/loader.js"></script>
