--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
         <script src="app/resources/barcodeScanner.js"></script>
         <script src="app/resources/vCardParser.js"></script>
         <script src="app/widgets/loader.js"></script>
-        <script src="app/widgets/QRscanner.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/widgets/QRscanner.js"></script>
         <script src="app/widgets/attendeeNotes.js"></script>
         <script src="app/widgets/logIn.js"></script>
         <script src="app/widgets/voteAttendeeForm.js"></script>
