--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
                         
         <script src="app/app.js"></script>
         <script src="app/config/autoload.js"></script>
-        <script src="app/config/config.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/config/config.js"></script>
         <script src="app/db.js"></script>
         <script src="app/models/User_model.js"></script>
         <script src="app/models/Note_model.js"></script>
