--- a/www/index.html
+++ b/www/index.html
@@ -459,7 +459,7 @@
                                             {{/if}}
                                         {{/if}}
                                         {{#if scan.email.[0]}}<li><a href="mailto:{{scan.email.[0]}}">Email</a></li>{{/if}}
-                                        {{#if scan.org}}<li><a href="{{scan.org}}" target="_blank"  data-rel="external" onclick="window.open('http://{{scan.org}}', '_blank', 'location=yes');">Web</a></li>{{/if}}
+                                        {{#if scan.org}}<li class="navlinktoweb"><a href="{{scan.org}}" target="_blank"  data-rel="external" onclick="window.open('http://{{scan.org}}', '_blank', 'location=yes');">Web</a></li>{{/if}}
                                     </ul>
                                 </div><!-- /navbar -->
                             </li>
