Some CSS tweaks

--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
                       
                     </form>
                     <div class="text">
-                        <p>For information on setting up your own server, go to <a href="org" target="_blank" data-rel="external" onclick="window.open('http://org', '_blank', 'location=yes');" href="http://genuitec.com/confbuddy">genuitec.com/confbuddy</a> or you can try out the example server at <a href="org" target="_blank" data-rel="external" onclick="window.open('http://org', '_blank', 'location=yes');" href="http://confbuddy.github.com/example/">http://confbuddy.github.com/example/</a></p>
+                        <p>For information on setting up your own server, go to <a href="org" target="_blank" data-rel="external" onclick="window.open('http://genuitec.com/confbuddy', '_blank', 'location=yes');">genuitec.com/confbuddy</a> or you can try out the example server at <a href="org" target="_blank" data-rel="external" onclick="window.open('http://confbuddy.github.com/example/, '_blank', 'location=yes');">http://confbuddy.github.com/example/</a></p>
                     </div>
                 </div>
             </div><!-- /content -->
