--- a/www/index.html
+++ b/www/index.html
@@ -78,12 +78,12 @@
                       
                     </form>
                     <div class="text">
-                        <p>For information on setting up your own server, go to <a href="org" target="_blank" data-rel="external" onclick="window.open('http://genuitec.com/confbuddy', '_blank', 'location=yes');">genuitec.com/confbuddy</a> or you can try out the example server at <a href="org" target="_blank" data-rel="external" onclick="window.open('http://confbuddy.github.com/example/, '_blank', 'location=yes');">http://confbuddy.github.com/example/</a></p>
+                        <p>For information on setting up your own server, go to <a href="http://genuitec.com/confbuddy" target="_blank" data-rel="external" onclick="window.open('http://genuitec.com/confbuddy', '_blank', 'location=yes');">genuitec.com/confbuddy</a> or you can try out the example server at <a href="http://genuitec.com/confbuddy" target="_blank" data-rel="external" onclick="window.open('http://confbuddy.github.com/example/, '_blank', 'location=yes');">http://confbuddy.github.com/example/</a></p>
                     </div>
                 </div>
             </div><!-- /content -->
             <div data-role="footer">
-                <h4>Built using <a href="org" target="_blank" data-rel="external" onclick="window.open('http://org', '_blank', 'location=yes');" href="https://www.genuitec.com">Genuitec software</a>.</h4>
+                <h4>Built using <a href="https://www.genuitec.com/" target="_blank" data-rel="external" onclick="window.open('https://www.genuitec.com/', '_blank', 'location=yes');" href="https://www.genuitec.com">Genuitec software</a>.</h4>
             </div><!-- /footer -->
         </div><!-- /page -->
         <!-- /login_page -->
@@ -113,7 +113,7 @@
             </div><!-- /content -->
 
            <div data-role="footer">
-                <h4>Built using <a href="org" target="_blank" data-rel="external" onclick="window.open('http://org', '_blank', 'location=yes');" href="https://www.genuitec.com">Genuitec software</a>.</h4>
+                <h4>Built using <a href="https://www.genuitec.com/" target="_blank" data-rel="external" onclick="window.open('https://www.genuitec.com/', '_blank', 'location=yes');" href="https://www.genuitec.com">Genuitec software</a>.</h4>
             </div><!-- /footer -->
         </div><!-- /page -->
         <!-- /chooseconference_page -->
