Footer links fixed

--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
                       
                     </form>
                     <div class="text">
-                        <p>For information on setting up your own server, go to <a href="#" target="_blank" data-rel="external" onclick="window.open('http://genuitec.com/confbuddy', '_system', 'location=yes');">genuitec.com/confbuddy</a> or you can try out the example server at <a href="#" target="_system" data-rel="external" onclick="window.open('http://confbuddy.github.com/example/', '_system', 'location=yes');">http://confbuddy.github.com/example/</a></p>
+                        <p>For information on setting up your own server, go to <a href="#" target="_system" data-rel="external" onclick="window.open('http://genuitec.com/confbuddy', '_system', 'location=yes');">genuitec.com/confbuddy</a> or you can try out the example server at <a href="#" target="_system" data-rel="external" onclick="window.open('http://confbuddy.github.com/example/', '_system', 'location=yes');">http://confbuddy.github.com/example/</a></p>
                     </div>
                 </div>
             </div><!-- /content -->
