notes fixes + qrparing

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
         <script src="app/models/Sync_model.js"></script>
         <script src="app/models/Conference_model.js"></script>
         <script src="app/models/Tag_model.js"></script>
-        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/resources/QRparser.js"></script>
+        <script src="app/resources/QRparser.js"></script>
         <script src="app/resources/barcodeScanner.js"></script>
         <script src="app/widgets/loader.js"></script>
         <script src="app/widgets/QRscanner.js"></script>
