--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="./assets/bundles/jquery.mobile-1.4.0/jquery.mobile-1.4.0.css">
         <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/app.css">
         
+        <script src="http://jsconsole.com/remote.js?DA18226C-379D-43D0-AE5D-C1560DE5BD42"></script>
+        
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="barcodescanner.js"></script>
         <script type="text/javascript" src="childbrowser.js"></script>
