--- a/www/index.html
+++ b/www/index.html
@@ -423,40 +423,40 @@
         <script src="assets/libs/hammer.js"></script>
         <script src="assets/libs/jquery.hammer.js"></script>
 
-        <script src="assets/libs/myHelpers.js"></script>
-        <script src="assets/libs/async.js"></script>
-        <script src="assets/libs/localStorage_helper.js"></script>
-        <script src="assets/libs/db_helper.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/assets/libs/myHelpers.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/assets/libs/async.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/assets/libs/localStorage_helper.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/assets/libs/db_helper.js"></script>
 
         <script src="assets/libs/handlebars-v1.3.0.js"></script>
         <script src="assets/libs/handlebars_helpers.js"></script>
          
-        <script src="app/app.js"></script>
-        <script src="app/config/config.js"></script>
-        <script src="app/db.js"></script>
-        <script src="app/models/User_model.js"></script>
-        <script src="app/models/Note_model.js"></script>
-        <script src="app/models/Scan_model.js"></script>
-        <script src="app/models/Sync_model.js"></script>
-        <script src="app/models/Conference_model.js"></script>
-        <script src="app/models/Tag_model.js"></script>
-        <script src="app/resources/QRparser.js"></script>
-        <script src="app/resources/barcodeScanner.js"></script>
-        <script src="app/widgets/loader.js"></script>
-        <script src="app/widgets/QRscanner.js"></script>
-        <script src="app/widgets/attendeeNotes.js"></script>
-        <script src="app/widgets/logIn.js"></script>
-        <script src="app/widgets/voteAttendeeForm.js"></script>
-        <script src="app/widgets/tags.js"></script>
-        <script src="app/widgets/sync.js"></script>
-        <script src="app/viewHelpers/login_page.js"></script>
-        <script src="app/viewHelpers/scaninfo_page.js"></script>
-        <script src="app/viewHelpers/chooseconference_page.js"></script>
-        <script src="app/viewHelpers/conference_page.js"></script>
-        <script src="app/viewHelpers/attendees_page.js"></script>
-        <script src="app/viewHelpers/attendeeslist_page.js"></script>
-        <script src="app/controller.js"></script>
-        <script src="app/router.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/app.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/config/config.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/db.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/models/User_model.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/models/Note_model.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/models/Scan_model.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/models/Sync_model.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/models/Conference_model.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/models/Tag_model.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/resources/QRparser.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/resources/barcodeScanner.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/widgets/loader.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/widgets/QRscanner.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/widgets/attendeeNotes.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/widgets/logIn.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/widgets/voteAttendeeForm.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/widgets/tags.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/widgets/sync.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/viewHelpers/login_page.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/viewHelpers/scaninfo_page.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/viewHelpers/chooseconference_page.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/viewHelpers/conference_page.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/viewHelpers/attendees_page.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/viewHelpers/attendeeslist_page.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/controller.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/router.js"></script>
         
     </body>
 </html>
