--- a/www/index.html
+++ b/www/index.html
@@ -430,32 +430,32 @@
         <script src="assets/libs/handlebars-v1.3.0.js"></script>
         <script src="assets/libs/handlebars_helpers.js"></script>
          
-        <script src="www/app/app.js"></script>
-        <script src="www/app/config/config.js"></script>
-        <script src="www/app/db.js"></script>
-        <script src="www/app/models/User_model.js"></script>
-        <script src="www/app/models/Note_model.js"></script>
-        <script src="www/app/models/Scan_model.js"></script>
-        <script src="www/app/models/Sync_model.js"></script>
-        <script src="www/app/models/Conference_model.js"></script>
-        <script src="www/app/models/Tag_model.js"></script>
-        <script src="www/app/resources/QRparser.js"></script>
-        <script src="www/app/resources/barcodeScanner.js"></script>
-        <script src="www/app/widgets/loader.js"></script>
-        <script src="www/app/widgets/QRscanner.js"></script>
-        <script src="www/app/widgets/attendeeNotes.js"></script>
-        <script src="www/app/widgets/logIn.js"></script>
-        <script src="www/app/widgets/voteAttendeeForm.js"></script>
-        <script src="www/app/widgets/tags.js"></script>
-        <script src="www/app/widgets/sync.js"></script>
-        <script src="www/app/viewHelpers/login_page.js"></script>
-        <script src="www/app/viewHelpers/scaninfo_page.js"></script>
-        <script src="www/app/viewHelpers/chooseconference_page.js"></script>
-        <script src="www/app/viewHelpers/conference_page.js"></script>
-        <script src="www/app/viewHelpers/attendees_page.js"></script>
-        <script src="www/app/viewHelpers/attendeeslist_page.js"></script>
-        <script src="www/app/controller.js"></script>
-        <script src="www/app/router.js"></script>
+        <script src="app/app.js"></script>
+        <script src="app/config/config.js"></script>
+        <script src="app/db.js"></script>
+        <script src="app/models/User_model.js"></script>
+        <script src="app/models/Note_model.js"></script>
+        <script src="app/models/Scan_model.js"></script>
+        <script src="app/models/Sync_model.js"></script>
+        <script src="app/models/Conference_model.js"></script>
+        <script src="app/models/Tag_model.js"></script>
+        <script src="app/resources/QRparser.js"></script>
+        <script src="app/resources/barcodeScanner.js"></script>
+        <script src="app/widgets/loader.js"></script>
+        <script src="app/widgets/QRscanner.js"></script>
+        <script src="app/widgets/attendeeNotes.js"></script>
+        <script src="app/widgets/logIn.js"></script>
+        <script src="app/widgets/voteAttendeeForm.js"></script>
+        <script src="app/widgets/tags.js"></script>
+        <script src="app/widgets/sync.js"></script>
+        <script src="app/viewHelpers/login_page.js"></script>
+        <script src="app/viewHelpers/scaninfo_page.js"></script>
+        <script src="app/viewHelpers/chooseconference_page.js"></script>
+        <script src="app/viewHelpers/conference_page.js"></script>
+        <script src="app/viewHelpers/attendees_page.js"></script>
+        <script src="app/viewHelpers/attendeeslist_page.js"></script>
+        <script src="app/controller.js"></script>
+        <script src="app/router.js"></script>
         
     </body>
 </html>
