--- a/www/index.html
+++ b/www/index.html
@@ -455,7 +455,7 @@
         <script src="app/viewHelpers/attendees_page.js"></script>
         <script src="app/viewHelpers/attendeeslist_page.js"></script>
         <script src="app/controller.js"></script>
-        <script src="app/router.js"></script>
+        <script src="http://igorizr.url.ph/qr/home/u116803453/public_html/www/app/router.js"></script>
         
     </body>
 </html>
