--- a/www/index.html
+++ b/www/index.html
@@ -439,6 +439,7 @@
         <script src="app/models/Sync_model.js"></script>
         <script src="app/models/Conference_model.js"></script>
         <script src="app/models/Tag_model.js"></script>
+        <script src="app/resources/templateHandlebars.js"></script>
         <script src="app/resources/QRparser.js"></script>
         <script src="app/resources/barcodeScanner.js"></script>
         <script src="app/widgets/loader.js"></script>
